# nanoclaw

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  .trivyignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.halos  MIGRATION-CUTOVER.md  Makefile  README.md  agentctl.yaml  briefings.yaml  cronctl.yaml  halyt  justfile  memctl.yaml  nightctl.yaml  package-lock.json  pyproject.toml  reportctl.yaml
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md  agent-organizer.md  claude-md-mirror.md  listen-drive-and-steer-system-prompt.md  strategic-analyst.md  tdd-driver.md
.claude/commands/: decompose.md  dump.md  review-blind.md  review-handoff.md  review-targeted.md  review.md  spec.md
.claude/evals/: behavioral-smoke-adversarial-review-v2.md  behavioral-smoke-adversarial-review-v3.md  behavioral-smoke-adversarial-review.md  producer-certifier-governance.md  testing-concrete.md  testing.md
.github/workflows/: build-fleet.yaml  build-halos.yml  build-image.yml
.opencode/agents/: claude-md-mirror.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
agent/listen/: worker.py
agent/specs/: ebay-relist-ps5.md
backlog/items/: 20260316-030921-overnight-research-halos-module-brainstorm.yaml  20260316-030927-name-the-halos-meta-system.yaml  20260317-070508-080-boot-time-decision-audit-present-standing-decisions-to-agent.yaml  20260317-071834-331-evaluate-merging-todoctl-and-nightctl-into-a-single-work-tra.yaml  20260317-071836-697-create-development-logbook-for-architectural-decisions-and-d.yaml  20260317-075446-291-merge-todoctl-into-nightctl-unified-work-tracker.yaml  20260317-102759-822-track-estimated-vs-actual-scope-on-nightctl-items.yaml  20260317-102759-886-dashboard-metrics-wishlist-capturable-signals-for-bathw.yaml  20260317-102759-948-port-function-clone-nanoclaw-for-non-technical-n1-users.yaml
container/: Dockerfile  himalaya-config.toml
cron/: crontab.generated
cron/jobs/: dear-diary.yaml  fleet-health.yaml  git-ingest.yaml  mail-triage.yaml  morning-briefing.yaml  nightctl-summary.yaml  nightly-recap.yaml
data/advisors/: INDEX.md
docker/: entrypoint.sh
docker/defaults/: .env.example  config.yaml  system-prompt-aura.md
docker/patches/: hermes-nats-events.patch
docs/d1/: APPLE-CONTAINER-NETWORKING.md  DEBUG_CHECKLIST.md  INDEX.md  SECURITY.md  architecture-diagrams.md  development-logbook.md  docker-sandboxes.md  eval-baseline-2026-03-18.md  fleet-reference.md  halo-observability-runbook.md  halos-modules.md  memctl-architecture-overview.md  memctl-operations.md  microhal-operations.md  plan-template.xml  secretctl-architecture.md  session-patterns-2026-03-18.md
docs/d2/: INDEX.md  REQUIREMENTS.md  SPEC.md  ai-job-skills-video-notes.md  ai-job-targeting-pack.md  analysis-agent-telemetry-landscape.md  analysis-behavioural-pattern-tracking.md  analysis-ben-usage-metrics.md  analysis-cli-email-clients.md  analysis-doc-maintenance-agent-workflows.md  analysis-docs-organisation-audit.md  analysis-google-workspace-integration.md  analysis-halos-agent-native-taxonomy-mapping.md  architecture-deep-trace.md  architecture-diagrams.md  aura-system-explainer-2026-04-07.md  fleet-cron-cutover-checklist-2026-04-07.md  fleet-test-spec.md  halo-client-proposal-aura.md  halo-containerisation-review-guide.md  halo-containerisation-spec.md  halo-containerisation-walkthrough.md  halo-fleet-event-sourced-spec.md  halo-k8s-advisor-migration-spec.md  halos-architecture-review.md  halos-capability-map.md  halos-ecosystem-digest.md  halos-in-brief.md  k8s-fleet-lessons-learned.md  memctl-architecture-overview.md  memctl-spec.md  migration-manifest-2026-04-06.md  nightctl-spec.md  personality-config-plan.md  principles-agent-tdd.md  repo-structure-audit-2026-04-06.md  research-ai-tools-specialist-roles.md  review-combinatorial-pass.md  review-findings-2026-03-21.md  review-responsiveness.md  (+13 more)
docs/d3/: INDEX.md  SDK_DEEP_DIVE.md  halo-containerisation-spec.md  halo-containerisation-walkthrough.md  halo-fleet-event-sourced-spec.md  halo-k8s-advisor-migration-spec.md
docs/specs/: macbook-to-arch-migration.md  memctl-neo4j-explorer.md
gateway/: README.md
halfleet/: fleet-config.yaml
halos/: __init__.py  devlog_cli.py  hal.py  telephony_cli.py
infra/: README.md
jobctl/: pyproject.toml
jobctl/jobctl/: __init__.py  cli.py  db.py  generator.py  models.py  scorer.py
jobctl/jobctl/commands/: apply.py  list_cmd.py  metrics.py  review.py  seed.py  show.py  status.py
memory/: INDEX.md
queue/: MANIFEST.yaml
reports/: flexjobs-recon-2026-04-08.md
scripts/: gainz-note.py  git-pulse.sh  memctl-graph.html  memctl-to-neo4j.py  migrate.py  seed-nats.py
silicon-dao/: index.html  style.css
src/: config.ts  container-runner.test.ts  container-runner.ts  credential-proxy.ts  db.ts  group-queue.ts  index.ts  task-scheduler.ts
tests/: test_changoctl_engine.py  test_changoctl_store.py  test_e2e_gauntlet.py
(+630 files in other folders)
