[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halos"
version = "0.1.0"
description = "HAL agent operating system - CLI tools for memory, jobs, cron, and backlog"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
graph = ["networkx>=3.0", "pyvis>=0.3.2"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
memctl = "halos.memctl.cli:main"
nightctl = "halos.nightctl.cli:main"
cronctl = "halos.cronctl.cli:main"
todoctl = "halos.todoctl.cli:main"
logctl = "halos.logctl.cli:main"
reportctl = "halos.reportctl.cli:main"
agentctl = "halos.agentctl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
