[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halos"
version = "0.1.0"
description = "HAL agent operating system - CLI tools for memory, jobs, cron, and backlog"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "feedparser>=6.0",
    "httpx>=0.27.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.optional-dependencies]
graph = ["networkx>=3.0", "pyvis>=0.3.2"]
briefings = ["anthropic>=0.40.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
memctl = "halos.memctl.cli:main"
nightctl = "halos.nightctl.cli:main"
cronctl = "halos.cronctl.cli:main"
logctl = "halos.logctl.cli:main"
reportctl = "halos.reportctl.cli:main"
agentctl = "halos.agentctl.cli:main"
hal-briefing = "halos.briefings.cli:main"
halctl = "halos.halctl.cli:main"
trackctl = "halos.trackctl.cli:main"
dashctl = "halos.dashctl.cli:main"
mailctl = "halos.mailctl.cli:main"
calctl = "halos.calctl.cli:main"
statusctl = "halos.statusctl.cli:main"
backupctl = "halos.backupctl.cli:main"
blogctl = "halos.blogctl.cli:main"
ledgerctl = "halos.ledgerctl.cli:main"
carnivorectl = "halos.carnivorectl.cli:main"
docctl = "halos.docctl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks lightweight smoke tests",
]
